# EDITO_data_python

./: .gitignore  pyproject.toml
A_general_scripts/: 6_stac_metadata_search.py  6_stac_metadata_search.sh  readme.md
B_DTO-Bioflow-support-DUCs/: 6_search_dataset_koster.ipynb  debug_climate_forecast-sea_water_temperature.ipynb  readme.md
C_Troubleshooting/: handling_invalid_STAC.py
