[project]
name = "edito-python-stac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pystac-client",
    "xarray",
    "geopandas",
    "numpy",
    "pandas",
    "cartopy",
    "matplotlib",
    "shapely",
    "ipykernel",
    "contextily",
    "pyarrow",
    "copernicusmarine",
]
